--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "react-ts-demo",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.16.x",
+    "npm": ">= 7.9 < 8"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -18,10 +22,19 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "run-p start:*",
+    "start:react": "react-app-rewired start",
+    "start:tsm": "npm run tsm:watch",
+    "build": "run-s build:tsm build:react",
+    "build:react": "react-app-rewired build",
+    "build:tsm": "npm run tsm",
+    "test": "",
+    "test:internal": "react-app-rewired test --watchAll=false",
+    "test:watch": "react-app-rewired test --coverage",
+    "test:coverage": "react-app-rewired test --coverage --watchAll=false",
+    "eject": "react-app-rewired eject",
+    "tsm": "tsm src",
+    "tsm:watch": "tsm src --watch"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +53,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cspell": "^5.4.1",
+    "customize-cra": "^1.0.0",
+    "npm-run-all": "^4.1.5",
+    "react-app-rewired": "^2.1.8",
+    "sass": "^1.32.13",
+    "typed-scss-modules": "^4.1.1"
   }
 }
