--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "run-s build:tsm build:react",
     "build:react": "react-app-rewired build",
     "build:tsm": "npm run tsm",
-    "test": "",
+    "test": "run-s tsm test:internal",
     "test:internal": "react-app-rewired test --watchAll=false",
     "test:watch": "react-app-rewired test --coverage",
     "test:coverage": "react-app-rewired test --coverage --watchAll=false",
